--- a/package.json
+++ b/package.json
@@ -2,23 +2,37 @@
   "name": "valdr",
   "version": "1.1.5",
   "description": "A model centric approach to AngularJS form validation",
-  "main": "valdr.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "homepage": "https://github.com/netceteragroup/valdr",
   "repository": {
     "type": "git",
-    "url": "https://github.com/netceteragroup/valdr"
+    "url": "git://github.com/netceteragroup/valdr"
   },
-  "keywords": [
-    "angularjs",
-    "validation",
-    "valdr"
-  ],
-  "author": "Philipp Denzler <philippd@gmail.com>",
+  "scripts": {
+    "postinstall": "bower install"
+  },
+  "author": {
+    "name": "Netcetera AG"
+  },
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/netceteragroup/valdr/issues"
-  },
-  "homepage": "https://github.com/netceteragroup/valdr"
+  "devDependencies": {
+    "bower": "~1.3.12",
+    "karma": "~0.12.31",
+    "karma-jasmine": "~0.1.5",
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-firefox-launcher": "~0.1.4",
+    "karma-phantomjs-launcher": "0.1.4",
+    "karma-coverage": "~0.2.7",
+    "karma-coveralls": "~0.1.4",
+    "grunt": "~0.4.5",
+    "grunt-karma": "~0.8.2",
+    "grunt-contrib-copy": "~0.7.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-uglify": "~0.7.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "load-grunt-tasks": "~2.0.0",
+    "express": "~3.4.8",
+    "grunt-express": "~1.2.1"
+  }
 }
